--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -20,7 +20,10 @@
 <main class="welfare-page">
   <section class="section-welcome fadein">
     <div class="container-1200">
-      <h3 class="ttl-tertiary">人材の定着・従業員のモチベーションUPに。</h3>
+
+      <div class="bg-tertiary-title">
+        <h3 class="ttl-tertiary">人材の定着・従業員のモチベーションUPに。</h3>
+      </div>
 
       <h1 class="ttl-primary">福利厚生を充実できるサービス</h1>
 
@@ -199,7 +202,7 @@
                 <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
               </div>
             </div>
-          </div>
+        </div>
         </div>
       </div>
 
@@ -211,52 +214,65 @@
             </h3>
 
             <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、幅広いサービスを各種取りそろえています。</dd>
-
-            <div class="card-icon flex">
-              <div> <img src="/assets/img/common/img-carousel-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-cutlery-set-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-mirror-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-golf-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-book-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-heart-in-hand-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-flower-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/img-bag-01.png" alt=""></div>
-            </div>
-
-            <div class="flex gap30 card-list">
-              <div class="card-type11">
-                <a href="#" class="card">
-                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
-
-                  <div class="flex gap30 item-list">
-                    <div class="item__img">イラスト<br>または
-                      <br>
-                      アイコン
-                    </div>
-
-                    <div class="item__box">
-                      <h3 class="ttl-tertiary">レジャーや健康増進、育児・介護のライフサポートなど、従業員の方々が利用しやすい多彩な優待を取り揃えています。</h3>
-                    </div>
+            <ul class="card-solution-list">
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_1.png" alt="welfare support 1">
+                <span>レジャー</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_2.png" alt="welfare support 2">
+                <span>グルメ</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_3.png" alt="welfare support 3">
+                <span>ビューティー</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_4.png" alt="welfare support 4">
+                <span>スポーツ</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_5.png" alt="welfare support 5">
+                <span>キャリア</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_6.png" alt="welfare support 6">
+                <span>ライフ サポート</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_7.png" alt="welfare support 7">
+                <span>セレモニー</span>
+              </li>
+              <li>
+                <img src="/assets/img/saison_welfare/welfare_feature_8.png" alt="welfare support 8">
+                <span>トラベル</span>
+              </li>
+            </ul>
+            <div class="preferential-service">
+              <ul class="preferential-service-content">
+                <li>
+                  <div class="card-title">
+                    全国25,000以上の施設で最大</br>66%OFFで利用可能
                   </div>
-                </a>
-              </div>
-
-              <div class="card-type11">
-                <a href="#" class="card">
-                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
-
-                  <div class="flex gap30 item-list">
-                    <div class="item__img">イラスト<br>または
-                      <br>
-                      アイコン
+                  <a href="#">
+                    <img src="/assets/img/welfare/welfare_card1.png" alt="preferential service 1"/>
+                    <div class="preferential-service-description">
+                      <p class="description"><strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。</p>
                     </div>
-
-                    <div class="item__box">
-                      <h3 class="ttl-tertiary"> 日本語、英語のほか中国語（簡体、繁体）、ベトナム語に対応しています！</h3>
-                    </div>
+                  </a>
+                </li>
+                <li>
+                  <div class="card-title">
+                    外国籍の従業員も利用しやすい</br>環境が整っています。
                   </div>
-                </a>
-              </div>
+                  <a href="#">
+                    <img src="/assets/img/welfare/welfare_card2.png" alt="preferential service 2"/>
+                    <div class="preferential-service-description">
+                      <p class="description">日本語、英語のほか<strong>中国語（簡体、繁体）、ベトナム語</strong>に対応しています。</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -286,7 +302,7 @@
     <div class="card-type22">
       <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
         <div class="tooltip">
-          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ<" | safe}}/h4>
+          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}/h4>
         </div>
       </h3>
       <div class="useful-wp container">
