--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -280,7 +280,7 @@
     </div>
   </section>
 
-  <section class="section-tertiary">
+  <section class="section-tertiary fadein">
     <div class="container-1200">
       <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）〜  / 1アカウント</h2>
 
