--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -202,13 +202,13 @@
               <div href="#" class="card">
                 <summary class="card__box">
                   <div class="card__box--ttl">まずは相談・お問い合わせをしたい</br>という方はこちら</div>
-                  <div><a class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
+                  <div><a class="blue_gradient_btn" href="/contact/">ご相談・お問い合わせ（無料）</a></div>
                 </summary>
             </div>
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">今すぐお申し込みをしたい</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60">審査おお申し込み</a></div>
               </summary>
             </div>
           </div>
@@ -295,7 +295,7 @@
         </li>
       </ul>
 
-      <div><a class="blue_gradient_btn" href="#">お申し込みはこちら</a></div>
+      <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60">審査お申込みはこちら</a></div>
     </section>
 
     <section id="faq" class="section-question-and-answer fadein">
@@ -380,13 +380,13 @@
       <div class="container">
         <ul class="external-list">
           <li class="external-item">
-            <a class="external-item-link" href="#">
+            <a class="external-item-link" href="https://www.saisoncard.co.jp/creditcard/cashing/notice/">
               {% include 'component/icons/circle-list-style.njk' %}
               カードキャッシングご利用に関するお知らせ
             </a>
           </li>
           <li class="external-item">
-            <a class="external-item-link" href="#">
+            <a class="external-item-link" href="https://www.saisoncard.co.jp/services/sj042-kashitsuke.html">
               {% include 'component/icons/circle-list-style.njk' %}
               貸付条件表はこちら
             </a>
