--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -185,7 +185,7 @@
     <div class="containers">
       <h4 class="ttl-primary">付帯サービス</h4>
       <div class="grid-card-containers">
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat5.png" alt="work image" >
           </div>
@@ -193,9 +193,9 @@
             <h4 class="ttl-quaternary">国内空港ラウンジ</h4>
             <div class="ttl-normal">国内の主要空港ラウンジを無料でご利用いただけます。ご搭乗までのひとときを、ゆったりとお過ごしください。従業員様のカードもご利用いただけます。</div>
           </div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat6.png" alt="work image" >
           </div>
@@ -203,9 +203,9 @@
             <h4 class="ttl-quaternary">海外空港ラウンジ</h4>
             <div class="ttl-normal">148以上の国や地域、1,300ヵ所以上の空港ラウンジをご利用いただける「プライオリティ・パス（通常年会費469米ドル／プレステージ会員）」に代表者様カード限定の特別なサービスとして無料でご登録いただけます。</div>
           </div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat3.png" alt="work image" >
           </div>
@@ -213,9 +213,9 @@
             <h4 class="ttl-quaternary">一休プレミアサービス</h4>
             <div class="ttl-normal">全国の厳選されたホテル・旅館・レストランをお得に予約できる「一休プレミアサービス」。特典を体験いただけるご優待をご用意いたしました。</div>
           </div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat4.png" alt="work image" >
           </div>
@@ -223,9 +223,9 @@
             <h4 class="ttl-quaternary">セゾンプレミアムセレクション by クラブ・コンシェルジュ</h4>
             <div class="ttl-normal">一見さんお断りの老舗料亭のご利用や、祇園でのお茶屋遊び、予約の取りずらい美食店の特別リザーブなど多彩なサービスを提供する「セゾンプレミアムセレクション」を無料にてご登録いただけます。</div>
           </div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat2.png" alt="work image" >
           </div>
@@ -233,9 +233,9 @@
             <h4 class="ttl-quaternary">プラチナ会員専用コールセンター</h4>
             <div class="ttl-normal">出張の手配や会食の設定などは、専用のコールセンターへ。<br> 24時間365日、専任のスタッフが誠心誠意お応えします。</div>
           </div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <div class="card-img">
             <img src="/assets/img/common/plat1.png" alt="work image" >
           </div>
@@ -243,7 +243,7 @@
             <h4 class="ttl-quaternary">従業員様も対象の旅行傷害保険</h4>
             <div class="ttl-normal">海外・国内の旅行中の事故について補償いたします。海外旅行中の事故について最高１億円※1まで、国内旅行中の事故について最高5,000万円※2まで補償いたします。代表者様はもちろん追加カードを発行された従業員様も対象となります。</div>
           </div>
-        </a>
+        </div>
       </div>
 
       <div class="sub-content">
@@ -260,23 +260,23 @@
       <h2 class="ttl-quaternary">起業から事業成長まで、あらゆるビジネスシーンをサポート。経費管理から資金管理、会食や出張で役立つサービスなど、 個人事業主様や経営者にゆとりと安心を提供する一枚です。</h2>
       
       <div class="grid-card-containers">
-        <a class="card">
+        <div class="card">
           <h2 class="ttl-head">毎⽇の経費管理で</h2>
           <img src="/assets/img/common/plat8.png" alt="work image" class="card-img">
           <div class="ttl-normal">起業したばかりで、できるだけ本業に専念したい。しかし、経費管理がいかに大変かを思い知る。セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードに出会い、支払いにおける振り込みの手間や手数料が省けただけでなく、明細もすぐにわかるので、領収書管理といった煩わしさからも解放された。</div>
-        </a>
+        </div>
         
-        <a class="card">
+        <div class="card">
           <h2 class="ttl-head">毎⽉の資⾦管理で</h2>
           <img src="/assets/img/common/plat7.png" alt="work image" class="card-img">
           <div class="ttl-normal">起業したばかりで、できるだけ本業に専念したい。しかし、経費管理がいかに大変かを思い知る。セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードに出会い、支払いにおける振り込みの手間や手数料が省けただけでなく、明細もすぐにわかるので、領収書管理といった煩わしさからも解放された。</div>
-        </a>
+        </div>
 
-        <a class="card">
+        <div class="card">
           <h2 class="ttl-head">利用可能額を超えた時に</h2>
           <img src="/assets/img/common/plat9.png" alt="work image" class="card-img">
           <div class="ttl-normal">起業したばかりで、できるだけ本業に専念したい。しかし、経費管理がいかに大変かを思い知る。セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードに出会い、支払いにおける振り込みの手間や手数料が省けただけでなく、明細もすぐにわかるので、領収書管理といった煩わしさからも解放された。</div>
-        </a>
+        </div>
       </div>
     </div>
   </section>
@@ -337,7 +337,7 @@
                   <li>プラチナカード</li>
                   <li>キャッシュバック率 1％※1</li>
                   <li>支払いサイト 最長84日間※1</li>
-                  <li>海外最高1億円、国内最高5,000万円の旅行傷害保険</li>
+                  <li>海外最高1億円、国内最高5,000万円の<br/>旅行傷害保険</li>
                 </ul>
               </div>
             </div>
@@ -395,14 +395,14 @@
             <div class="">
               <div class="content-col height-80">
                 <div class="normal-text">
-                  3,300円（税込）
+                  10枚（本カード含）
                 </div>
               </div>
             </div>
             <div class="">
               <div class="content-col height-80">
                 <div class="normal-text">
-                  永年無料
+                  10枚（本カード含）
                 </div>
               </div>
             </div>
