--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -562,7 +562,7 @@
                       導入にあたってのご相談や、貴社の運用フローに合わせた導入方法をご提案させていただきます。
                     </div>
                   </div>
-                <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="/contact/">導入のご相談・お問い合わせ（無料）</a></div>
               </summary>
             </div>
           </div>
