--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -8,6 +8,7 @@
     .banner-containers {
       display: flex;
       justify-content: space-between;
+      padding: 0 100px;
       .banner-left {
         .title-notice {
           position: relative;
@@ -33,6 +34,7 @@
           font-size: 42px;
           color: #ffffff;
           text-align: start;
+          text-shadow: 0pt 0pt 20pt #05172C8D;
         }
 
         .card-img {
@@ -103,6 +105,8 @@
         box-shadow: 0px 3px 20px #00000029;
         border-radius: 3px;
         .card-head {
+          font-size: 16px;
+          font-weight: bold;
           background: transparent
             linear-gradient(90deg, #111111 0%, #343434 100%) 0% 0% no-repeat
             padding-box;
@@ -115,6 +119,7 @@
           justify-content: center;
           align-items: center;
           font-size: 25px;
+          font-weight: bold;
           flex-direction: column;
           height: 185px;
           .minus-margin {
@@ -564,6 +569,7 @@
         align-items: center;
         border-bottom: 1px solid #fff;
         text-align: center;
+        line-height: 21px;
       }
       .margin-bottom {
         margin-bottom: 40px;
@@ -578,7 +584,7 @@
       }
       .content-col {
         background-color: #fff;
-        border: 1px solid gray;
+        border: 1px solid #f5f5f5;
         padding: 15px 30px;
         &.height-180 {
           height: 180px;
@@ -600,9 +606,11 @@
         }
         ul {
           li {
-            list-style-type: square;
+            list-style-type: disc;
+            margin-left: 30px;
             &::marker {
               color: #0297b5;
+              border-radius: 5px;
             }
           }
         }
