--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+
 .platinum_business-page {
   .section-welcome {
     background-image: url("/assets/img/common/banner_10.png");
@@ -72,6 +74,7 @@
         color: #fff;
         font-size: 29px;
         margin-left: -30px;
+        font-family: 'Sawarabi Mincho', serif;
       }
     }
 
