--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -38,7 +38,7 @@
 
       <ul class="flex jcC gap30 card-list">
         <li class="card-type6">
-          <a href="#challenge-raise-funds" class="card">
+          <a href="#employee" class="card">
             <div class="ttl-quaternary-container">
               <h4 class="ttl-quaternary">人材が定着しない <br/>
                 採用難易度があがっている</h4>
@@ -67,7 +67,7 @@
         </li>
 
         <li class="card-type6">
-          <a href="#challenge-raise-funds" class="card">
+          <a href="#effort" class="card">
             <div class="ttl-quaternary-container">
               <h4 class="ttl-quaternary">福利厚生を導入したいが <br/>
                 費用や手間がかかりそう</h4>
@@ -91,7 +91,7 @@
           </a>
         </li>
         <li class="card-type6">
-          <a href="#challenge-raise-funds" class="card">
+          <a href="#benefits" class="card">
             <div class="ttl-quaternary-container">
               <h4 class="ttl-quaternary">福利厚生を導入しているが
                 <br/>
@@ -137,7 +137,7 @@
       </h3>
 
       <div class="panel-primary">
-        <div class="notification-panel2">
+        <div id="employee" class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
               <span>①従業員のエンゲージメント向上で、離職防止に貢献</span>
@@ -175,7 +175,7 @@
       </div>
 
       <div class="panel-secondary fadein">
-        <div class="notification-panel2">
+        <div id="effort" class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
               <span>②完全アウトソーシングで運用の手間いらず</span>
@@ -207,7 +207,7 @@
       </div>
 
       <div class="panel-tertiary">
-        <div class="notification-panel2">
+        <div id="benefits" class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
               <span>③全国を網羅した豊富な特別優待メニュー</span>
