fix fontsize saison invoice

--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -357,7 +357,7 @@
 
     <section id="comment" class="section-voice fadein">
       <h5 class="ttl-sub">VOICE</h5>
-      <h2 class="ttl-secondary">ご利用者様の声</h2>
+      <h2 class="ttl-primary">ご利用者様の声</h2>
       <div class="list__wrapper">
         <div class="containers">
           <ul class="inherit card-list">
