--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -217,6 +217,66 @@
         }
       }
     }
+
+    .btn-action {
+      display: inline-flex;
+      gap: 20px;
+      .act-more {
+        margin: auto;
+        position: relative;
+        padding: 14px 64px 14px 48px;
+        white-space: nowrap;
+
+        @media #{$sp} {
+          max-width: unset;
+        }
+
+        &-tooltip {
+          position: absolute;
+          width: 100%;
+          top: -65px;
+          white-space: nowrap;
+          left: 50%;
+          transform: translateX(-50%);
+
+          @media #{$sp} {
+            width: auto;
+          }
+
+          &__content {
+            position: relative;
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: 25px;
+            background-color: #fff;
+            border-radius: 3px;
+            color: $orange-color;
+            padding: 10px 20px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::before {
+              position: absolute;
+              content: "\A";
+              top: calc(100% - 1px);
+              left: calc(50% - 15px);
+              width: 0;
+              height: 0;
+              border-left: 15px solid transparent;
+              border-right: 15px solid transparent;
+              border-top: 10px solid #fff;
+            }
+          }
+        }
+      }
+
+      @media #{$sp} {
+        flex-direction: column;
+        gap: 100px;
+      }
+    }
   }
 
   .section-card-support {
