--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -69,12 +69,18 @@
               中小企業様・個人事業主様向けローンサービス
             </h5>
           </div>
-          <div class="section-welcome__act">
-            <a href="#" class="act-more orange_more2">
+          <div class="btn-action">
+            <a href="/contact" target="_blank" class="act-more orange_more2">
               <div class="act-more-tooltip">
-                <h4 class="act-more-tooltip__content">商品案内をご覧ください</h4>
+                <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
               </div>
-              詳しくはこちらへ
+              ご相談・お問い合わせ
+            </a>
+            <a href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" class="act-more orange_more2">
+              <div class="act-more-tooltip">
+                <h4 class="act-more-tooltip__content">支払い.comが3分でわかる！</h4>
+              </div>
+              審査お申し込み
             </a>
           </div>
         </div>
