--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -179,7 +179,7 @@
     </div>
   </div>
 
-  <div class="nav__dropdown__sp sp-only open">
+  <div class="nav__dropdown__sp sp-only">
     <ul>
       <li>
         <a href="/strength">
