fix animation mega menu

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -138,7 +138,7 @@
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="/whitepaper_list">
+          <a href="/whitepaper">
             <span>お役立ちコラム</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -213,7 +213,7 @@
     </ul>
     <div class="nav__button">
       <div class="flex">
-        <div>   
+        <div>
           <a href="/seminar_list/" class="font-12px">セミナー・動画</a>
         </div>
         <div>
@@ -307,7 +307,7 @@
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="/whitepaper_list">
+          <a href="/whitepaper">
             <span>お役立ちコラム</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
