--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -49,7 +49,9 @@
 
 {# Main content #}
 {% block content %}
-  {% include 'partial/sidebar.njk' %}
+  <div class="business-support-loan">
+    {% include 'partial/sidebar.njk' %}
+  </div>
   <main class="business-support-loan-page">
     <section id="top" class="section-welcome fadein">
       <div class="section-welcome__banner">
