--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -749,6 +749,7 @@
 
   color: $primary-color;
   background-color: transparent;
+  transition: background-color 0.3s ease-in;
   padding: 18px 0;
   font-size: 16px;
   font-weight: bold;
@@ -817,7 +818,7 @@
   border-radius: 3px;
   margin: 0 auto;
   border: none;
-  transition: 0.7s;
+  transition: 0.3s;
   background-size: 200% auto;
   background-image: linear-gradient(
     60deg,
@@ -1058,13 +1059,13 @@
   font-weight: 400;
   text-align: center;
   padding: 12px 35px;
-  background: $orange-gradient;
   box-shadow: none;
   position: relative;
+  background-size: 100% auto;
+  background-image: linear-gradient(78deg, #F29B38 0%, #EE713F 100%);
   border-radius: 3px;
   margin: 0 auto;
   border: none;
-  transition: all 0.3s;
   @media #{$sp} {
     font-size: 14px;
     padding: 13px;
@@ -1089,7 +1090,8 @@
   }
   &:hover {
     opacity: 1;
-    background: $orange-gradient-reserve;
+    background-position: left;
+
     color: #fff;
     &::before {
       border-top: 2px solid #fff;
