--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
 
 .platinum_business-page {
   .section-welcome {
@@ -36,7 +36,7 @@
           font-size: 42px;
           color: #ffffff;
           text-align: start;
-          text-shadow: 0pt 0pt 20pt #05172C8D;
+          text-shadow: 0pt 0pt 20pt #05172c8d;
         }
 
         .card-img {
@@ -74,7 +74,7 @@
         color: #fff;
         font-size: 29px;
         margin-left: -30px;
-        font-family: 'Sawarabi Mincho', serif;
+        font-family: "Sawarabi Mincho", serif;
       }
     }
 
@@ -100,6 +100,12 @@
   }
 
   .section-tertiary {
+    .ttl-primary {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 51px;
+    }
+
     .grid-card-containers {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -196,6 +202,13 @@
     background: #014a58;
     color: #fff;
     text-align: center;
+
+    .ttl-primary {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 51px;
+    }
+
     .sub-content {
       margin-top: 20px;
       font-size: 14px;
@@ -205,6 +218,13 @@
 
   .section-quinary {
     background: #f5f5f5;
+
+    .ttl-primary {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 70px;
+    }
+
     .card-contents {
       margin-top: 30px;
       margin-bottom: 30px;
@@ -263,7 +283,10 @@
     background: #007477;
     color: #fff;
     text-align: center;
-
+    .ttl-primary {
+      font-size: 32px;
+      line-height: 51px;
+    }
     .ttl-tertiary {
       font-size: 14px;
       font-weight: bold;
@@ -347,6 +370,12 @@
   }
 
   .section-septenary {
+    .ttl-primary {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 70px;
+    }
+
     .grid-card-containers {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -395,6 +424,12 @@
   .section-octonary {
     background: #eeeeee;
     text-align: center;
+    .ttl-primary {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 70px;
+    }
+
     .ttl-quaternary {
       font-size: 20px;
       font-weight: normal;
@@ -550,6 +585,11 @@
   .section-card-info {
     background: #eeeeee;
 
+    .ttl-primary {
+      font-size: 32px;
+      line-height: 70px;
+    }
+
     .container-content {
       overflow: auto;
     }
@@ -624,6 +664,9 @@
     background: #eeeeee;
     .ttl-primary {
       margin-bottom: -10px;
+      font-size: 32px;
+      line-height: 70px;
+    
       @media #{$sp} {
         margin-bottom: 20px;
       }
