add class scroll

--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -310,7 +310,7 @@
     <div class="containers">
       <h4 class="ttl-primary">カード比較</h4>
 
-      <div class="container-content">
+      <div class="scroll container-content">
         <div class="grid-card-containers">
             <div class="margin-bottom">
               <div></div>
