--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -324,7 +324,7 @@ link: "#material"
   </section>
 
   <section id="comment" class="section-voice fadein">
-    <h5 class="ttl-sub">{{ payment_page.voice.sub_title }}</h5>
+    <h5 class="ttl-notice">{{ payment_page.voice.sub_title }}</h5>
     <h2 class="ttl-secondary">{{ payment_page.voice.title }}</h2>
     <div class="section-primary__wrapper">
       <div class="containers">
@@ -346,7 +346,7 @@ link: "#material"
 
   <section id="faq" class="section-question-and-answer fadein">
     <div class="container">
-      <h5 class="ttl-sub">FAQ</h5>
+      <h5 class="ttl-notice">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
       <span class="section-question-and-answer__description">
         お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="#">お問い合わせフォーム</a>より、お気軽にご連絡ください。
