--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -418,7 +418,7 @@
           </li>
           <li class="flow-item">
             <div class="flow-item-detail">
-              <h5 class="ttl-tertiary bold">お問い合わせ</h5>
+              <h5 class="ttl-tertiary bold">必要情報の登録・審査</h5>
               <div class="flow-item-image">
                 <img src="/assets/img/saison_invoice/flow2.png">
               </div>
@@ -427,7 +427,7 @@
           </li>
           <li class="flow-item">
             <div class="flow-item-detail">
-              <h5 class="ttl-tertiary bold">お問い合わせ</h5>
+              <h5 class="ttl-tertiary bold">ご利用開始</h5>
               <div class="flow-item-image">
                 <img src="/assets/img/saison_invoice/flow3.png">
               </div>
