--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -3,6 +3,9 @@
     &.bg-gray {
       background: $gray-color-9;
       padding: 70px 0;
+      @media #{$sp} {
+        padding: 35px 0;
+      }
     }
     .ttl-secondary {
       font-size: 16px;
@@ -11,7 +14,7 @@
       text-align: center;
 
       @media #{$sp} {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
     }
 
@@ -23,7 +26,7 @@
 
       @media #{$sp} {
         margin-bottom: 20px;
-        font-size: 26px;
+        font-size: 22px;
       }
     }
 
@@ -40,6 +43,9 @@
         color: $primary-color;
         text-decoration: underline;
         text-underline-offset: 4px;
+      }
+      @media #{$sp} {
+        font-size: 16px;
       }
     }
   }
@@ -192,6 +198,9 @@
             padding: 0 5px;
             background: $primary-color;
             border-radius: 4px;
+            @media #{$sp} {
+              padding: 10px 20px;
+            }
           }
         }
       }
