--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -101,7 +101,7 @@
         }
 
         @media #{$sp} {
-          flex-direction: column-reverse;
+          flex-direction: column;
           gap: 10px;
         }
       }
