--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -268,7 +268,7 @@
         <h1 class="ttl-primary">セゾンインボイスが、「請求・回収業務の負荷」や「資⾦繰り」に</br>関するお悩みを解決します。</h1>
         <div class="act-more">
           <div class="act-more-tooltip">
-            <h4 class="act-more-tooltip__content">{{"セゾンインボイスの仕組みと\nメリットが3分でわかる！" | safe}}</h4>
+            <h4 class="act-more-tooltip__content">{{"セゾンインボイスの仕組みとメリットが\n3分でわかる！" | safe}}</h4>
           </div>
           <div class="act-more-content">
             <div class="act-more-content-img">
@@ -439,7 +439,7 @@
         <div class="section-more">
           <a href="#" class="act-more blue_gradient_btn">
             <div class="act-more-tooltip">
-              <h4 class="act-more-tooltip__content">{{"貴社の課題に合わせてプランなどをご紹介いたします。\n まずはお気軽にご相談ください。" | safe}}</h4>
+              <h4 class="act-more-tooltip__content">{{"貴社の課題に合わせて \n プランなどをご紹介いたします。 \n まずはお気軽にご相談ください。" | safe}}</h4>
             </div>
             まずは無料登録からスタート
           </a>
