--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -374,7 +374,7 @@
     <div class="containers">
       <h5 class="ttl-sub">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
-      <h4 class="ttl-tertiary">お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a class="link-item">お問い合わせフォーム</a>より、お気軽にご連絡ください。 2営業日以内に担当者からご連絡させて頂きます。</h4>
+      <h4 class="ttl-tertiary">お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact" class="link-item">お問い合わせフォーム</a>より、お気軽にご連絡ください。 2営業日以内に担当者からご連絡させて頂きます。</h4>
       {% for i in range(1, 5) %}
         <div class="qa">
           <div class="flex gap20 question-tab">
