--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -349,7 +349,7 @@ link: "#material"
       <h5 class="ttl-notice">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
       <span class="section-question-and-answer__description">
-        お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="#">お問い合わせフォーム</a>より、お気軽にご連絡ください。
+        お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。
         </br>
         2営業日以内に担当者からご連絡させて頂きます。
       </span>
